Add kebak menu with disconnect button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">So nomanager</string>
+    <string name="action_disconnect">Disconnect</string>
+    <string name="action_settings">Settings</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Username</string>
     <string name="prompt_password">Password</string>
