--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="error_incorrect_password">This username or password is invalid</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+        completions."</string>
+
+    <string name="projects">"Projects"</string>
+    <string name="juries">"Juries"</string>
+
 </resources>
