Added all projects activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
 
     <string name="projects">"Projects"</string>
     <string name="juries">"Juries"</string>
+    <string name="all_projects">All Projects</string>
 
 </resources>
